Add Queue; make wacky naming better
TODO: Darken unusable cards
TODO: Rework BottomSylladex
TODO: Rework Queue to be front-based